FPLA-936 Update notification for C21